--- a/index.html
+++ b/index.html
@@ -1961,6 +1961,13 @@
         </table>
     </div>
     <script type="text/javascript" src="index/js/base.js"></script>
+    <script>
+        const uatext = document.createElement('div');
+        uatext.innerHTML = navigator.userAgent
+        uatext.style.padding = '10px';
+        uatext.style.fontSize = '18px';
+        document.body.appendChild(uatxt);
+    </script>
 </body>
 
 </html>
