--- a/index.html
+++ b/index.html
@@ -1965,8 +1965,10 @@
         </table>
     </div>
     <script type="text/javascript" src="index/js/base.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vconsole@latest/dist/vconsole.min.js"></script>
     <script>
         document.getElementById('UaText').innerHTML = navigator.userAgent;
+        var vConsole = new window.VConsole();
     </script>
 </body>
 
