--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>游戏中心</title>
     <meta name=viewport content=" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel=stylesheet href="index/css/base.css" />
+    <style>
+        .vc-logrow-icon {
+            width: auto !important;
+        }
+    </style>
 </head>
 
 <body>
